refactor(typings): fixes typescript issue

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Rangle.io - Typescript / React / Redux Seed</title>
+    <title>😻 console - build with typescript react antd and more more more .</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height:100%"></div>
   </body>
 </html>
