--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body>
     <div id="root" style="height:100%"></div>
-  <script type="text/javascript" src="/app.4b705e84c07c51326172.js"></script></body>
+  <script type="text/javascript" src="/typescript-react-redux-starter/app.c1fc8cef872d40b6e0e3.js"></script></body>
 </html>
