--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>😻 console - build with typescript react antd and more more more .</title>
-  </head>
-  <body>
-    <div id="root" style="height:100%"></div>
-  <script type="text/javascript" src="/typescript-react-redux-starter/app.813b954f7c5355dbb5fc.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta http-equiv="x-ua-compatible" content="ie=edge"><title>😻 console - build with typescript react antd and more more more .</title></head><body><div id="root" style="height:100%"></div><script type="text/javascript" src="/vendor.479cd45e8c4811db296d.js"></script><script type="text/javascript" src="/app.479cd45e8c4811db296d.js"></script></body></html>
